--- a/src/main/resources/application-archit.properties
+++ b/src/main/resources/application-archit.properties
@@ -1,8 +1,7 @@
-spring.profiles.active=archit
 spring.application.name=ApachePOI
 spring.datasource.url=jdbc:mysql://localhost:3306/poi
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
